--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -19,44 +19,52 @@
 .select2-results__options::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(255, 0, 0, 0.4);
 }
-
-.form-grid {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 1fr;
-  gap: 5px 5px;
-  grid-auto-flow: row;
+body {
+  margin: 40px;
 }
+.form-grid {
+		display: grid;
+    grid-gap: 10px;
+		grid-template-columns: repeat(auto-fill, 100px ) ;
+		background-color: #fff;
+		color: #444;
+	}
 
-.form-grid-col1 { grid-area: 2 / 1 / 4 / 4; }
+	.form-grid-top {
+		grid-column: 1 / 7;
+	}
+	.form-grid-col1-top {
+		grid-column: 1 / 4 ;
+    grid-row: 2 ;
 
-.form-grid-col2 { grid-area: 2 / 4 / 4 / 7; }
+	}
+	.form-grid-col2 {
+		grid-column: 4 / 7 ;
+		grid-row: 2 / 5 ;
+	}
 
-.form-grid-bottom { grid-area: 5 / 1 / 5 / 7; }
+  .form-grid-col1-s1 {
+		grid-column: 1 / 2 ;
+		grid-row: 3 ;
+	}
+	.form-grid-col1-s2 {
+		grid-column: 2 / 3 ;
+		grid-row: 3 ;
+	}
+	.form-grid-col1-s1 {
+		grid-column: 3 / 4 ;
+		grid-row: 3 ;
+	}
 
-.form-grid-col1-top { grid-area: 2/ 1 / 2 / 4; }
+	.form-grid-col1-bottom {
+		grid-column: 1 / 4;
+		grid-row: 4;
+	}
 
-.form-grid-col1-middle {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
-    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3"
-    "form-grid-col1-s1 form-grid-col1-s2 form-grid-col1-s3";
-  grid-area: 3 / 1 / 3 / 4;
-}
-
-.form-grid-col1-s1 { grid-area: form-grid-col1-s1; }
-
-.form-grid-col1-s2 { grid-area: form-grid-col1-s2; }
-
-.form-grid-col1-s3 { grid-area: form-grid-col1-s3; }
-
-.form-grid-col1-bottom { grid-area: 4 / 1 / 4 / 4; }
-
-.form-grid-top { grid-area: 1 / 1 / 2 / 7; }
+	.form-grid-bottom {
+		grid-column: 1 / 7;
+		grid-row: 5;
+	}
 
 
 .form-grid input {
