--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -33,37 +33,17 @@ body {
 	.form-grid-top {
 		grid-column: 1 / 7;
 	}
-	.form-grid-col1-top {
+	.form-grid-col1 {
 		grid-column: 1 / 4 ;
     grid-row: 2 ;
 
 	}
 	.form-grid-col2 {
 		grid-column: 4 / 7 ;
-		grid-row: 2 / 5 ;
-	}
-
-  .form-grid-col1-s1 {
-		grid-column: 1 / 2 ;
-		grid-row: 3 ;
-	}
-	.form-grid-col1-s2 {
-		grid-column: 2 / 3 ;
-		grid-row: 3 ;
-	}
-	.form-grid-col1-s1 {
-		grid-column: 3 / 4 ;
-		grid-row: 3 ;
-	}
-
-	.form-grid-col1-bottom {
-		grid-column: 1 / 4;
-		grid-row: 4;
 	}
 
 	.form-grid-bottom {
 		grid-column: 1 / 7;
-		grid-row: 5;
 	}
 
 
