--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -51,6 +51,7 @@ body {
   padding: 5px 10px;
   display: block;
   width: 100%;
+  height: 2.1em;
 }
 
 .form-grid select {
@@ -59,6 +60,7 @@ body {
   padding: 5px 10px;
   display: block;
   width: 100%;
+  height: 2.1em;
 }
 
 .form-grid label {
@@ -82,6 +84,7 @@ body {
   padding: 5px 10px;
   display: inline;
   width: 35%;
+  height: 2.1em;
 }
 .grid-flex-container {
   display: flex;
