--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -45,7 +45,7 @@ body {
 	}
 
 
-.form_replace input {
+#form_replace input {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
@@ -54,7 +54,7 @@ body {
   height: 2.1em;
 }
 
-.form_replace select {
+#form_replace select {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
@@ -63,7 +63,7 @@ body {
   height: 2.1em;
 }
 
-.form_replace label {
+#form_replace label {
   width: 100%;
   display: block;
   padding: 10px 5px 5px 2px;
