--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -50,7 +50,6 @@ body {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  width: 100%;
   height: 2.1em;
 }
 
@@ -59,8 +58,19 @@ body {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  width: 100%;
   height: 2.1em;
+}
+
+.form-grid input {
+  width: 100%;
+}
+
+.form-grid select {
+  width: 100%;
+}
+
+.form-grid label {
+  width: 100%;
 }
 
 #form_replace label {
