--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -9,7 +9,7 @@
 .form-grid {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill, 200px ) ;
+  /* grid-template-columns: repeat(auto-fill, 200px ) ; */
 }
 
 .form-grid-top {
