--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -73,7 +73,7 @@
   width: 90%;
 }
 
-.grid-flex-item .grid-flex-double select {
+.grid-flex-double select {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
