--- a/templates/default_submitter_email_template.html
+++ b/templates/default_submitter_email_template.html
@@ -1,7 +1,7 @@
 <p><br>Thank you for submitting the online meeting update.<br>We will usually be able action your
     request within 48 hours.<br>Our process also updates NA websites around Australia and at NA World Services.<br>
 </p>
-<hr><br>
+<hr>What was submitted: <br><br>
 <table class="blueTable" style="border: 1px solid #1C6EA4;background-color: #EEEEEE;text-align: left;border-collapse: collapse;">
     <thead style="background: #1C6EA4;border-bottom: 2px solid #444444;">
         <tr>
