--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -1,3 +1,9 @@
+.wbw_info_text {
+  padding-left: 15px;
+  background: #f8f8f8;
+  border-left: 5px solid lightblue;
+}
+
 .dialog_label {
   display: block;
 }
@@ -6,58 +12,41 @@
   display: block;
 }
 
-.wbw-sg {  display: grid;
-    grid-template-columns: 1.3fr 1.2fr;
-    grid-template-rows: 1fr;
-    gap: 5px 11px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "wbw-sg-col1 wbw-grid-col2";
-    width: 80%;
-    height: 80%;
-  }
-  
-  .wbw-grid-col2 { grid-area: wbw-grid-col2; }
-  
-  .wbw-sg-col1 {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "wbw-sg-col1-w1 wbw-sg-col1-w1 wbw-sg-col1-w1"
-      "wbw-sg-col1-t1 wbw-sg-col1-t2 wbw-sg-col1-t3"
-      "wbw-sg-col1-w2 wbw-sg-col1-w2 wbw-sg-col1-w2";
-    grid-area: wbw-sg-col1;
-  }
-  
-  .wbw-sg-col1-t1 { grid-area: wbw-sg-col1-t1; }
-  
-  .wbw-sg-col1-t2 { grid-area: wbw-sg-col1-t2; }
-  
-  .wbw-sg-col1-t3 { grid-area: wbw-sg-col1-t3; }
-  
-  .wbw-sg-col1-w1 { grid-area: wbw-sg-col1-w1; }
-  
-  .wbw-sg-col1-w2 { grid-area: wbw-sg-col1-w2; }
-  
-.wbw-sg input {
+.form-grid {
+  display: grid;
+  grid-gap: 20px;
+  /* grid-template-columns: repeat(auto-fill, 200px ) ; */
+}
+
+.form-grid-top {
+  grid-column: 1 / 7;
+}
+
+.form-grid-col1 {
+  grid-column: 1 / 4 ;
+
+}
+.form-grid-col2 {
+  grid-column: 4 / 7 ;
+}
+
+.form-grid input {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  width: 90%;
+  width: 100%;
 }
 
-.wbw-sg select {
+.form-grid select {
     line-height: 1.5;
     font-size: 1.2em;
     padding: 5px 10px;
     display: block;
-    width: 90%;
+    width: 100%;
   }
   
-.wbw-sg-col1-t3 select {
+.grid-flex-item select {
     line-height: 1.5;
     font-size: 1.2em;
     padding: 5px 10px;
@@ -65,17 +54,52 @@
     width: 30%;
   }
   
-.wbw-sg .wbw-changed {
+.form-grid .wbw-changed {
     background: #e7f478; 
    }
    
-.wbw-sg label {
+.form-grid label {
   width: 100%;
   display: block;
   padding: 10px 5px 5px 2px;
   letter-spacing: 1px;
   cursor: pointer;
 }
+
+.grid-flex-container {
+  display: flex;
+}
+
+.grid-flex-item {
+  flex-grow: 1;
+  /* height: 100px; */
+}
+
+.grid-flex-item input{
+  width: 90%;
+}
+
+.grid-flex-item select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: inline;
+  width: 90%;
+}
+
+.grid-flex-double {
+  flex-grow: 1;
+  height: 100px;
+}
+
+.grid-flex-double select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: inline;
+  width: 30%;
+}
+
 
 .grow-wrap {
   display: grid;
