--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -103,7 +103,7 @@ body {
   background: #e7f478; 
  }
 
- .select2-selection--multiple.meeting-input.wbw-changed
+ .select2-selection--multiple.meeting-input-select2.wbw-changed
  {
   background: #e7f478; 
  }
