--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -108,7 +108,7 @@ body {
   background: #e7f478; 
  }
 /* accessibility for close button */
- ul li button.select2-selection__choice__remove
+.select2-container--default .select2-selection--multiple button.select2-selection__choice__remove
  {
    color: #fff;
  }
