--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -110,5 +110,5 @@ body {
 /* accessibility for close button */
 .select2-container--default .select2-selection--multiple button.select2-selection__choice__remove
  {
-   color: #fff;
+   color: #000;
  }
