--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -102,3 +102,13 @@ body {
 .wbw-changed {
   background: #e7f478; 
  }
+
+ .select2-selection--multiple.display_format_shared_id_list-select2.wbw-changed
+ {
+  background: #e7f478; 
+ }
+/* accessibility for close button */
+.select2-container--default .select2-selection--multiple button.select2-selection__choice__remove
+ {
+   color: #000;
+ }
