--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -23,11 +23,12 @@
 }
 
 .form-grid-col1 {
-  grid-column: 1 / 4 ;
+  grid-column: 1 / 4;
 
 }
+
 .form-grid-col2 {
-  grid-column: 4 / 7 ;
+  grid-column: 4 / 7;
 }
 
 .form-grid input {
@@ -39,25 +40,35 @@
 }
 
 .form-grid select {
-    line-height: 1.5;
-    font-size: 1.2em;
-    padding: 5px 10px;
-    display: block;
-    width: 100%;
-  }
-  
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: block;
+  width: 100%;
+}
+
 .grid-flex-item select {
-    line-height: 1.5;
-    font-size: 1.2em;
-    padding: 5px 10px;
-    display: inline;
-    width: 30%;
-  }
-  
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: inline;
+  width: 30%;
+}
+
 .form-grid .wbw-changed {
-    background: #e7f478; 
-   }
-   
+  background: #e7f478;
+}
+
+.select2-selection--multiple.quickedit_format_shared_id_list-select2.wbw-changed {
+  background: #e7f478;
+}
+
+/* accessibility for close button */
+.select2-container--default .select2-selection--multiple button.select2-selection__choice__remove
+ {
+   color: #000;
+ }
+ 
 .form-grid label {
   width: 100%;
   display: block;
@@ -75,7 +86,7 @@
   /* height: 100px; */
 }
 
-.grid-flex-item input{
+.grid-flex-item input {
   width: 90%;
 }
 
@@ -104,16 +115,19 @@
 .grow-wrap {
   display: grid;
 }
+
 .grow-wrap::after {
   content: attr(data-replicated-value) " ";
   white-space: pre-wrap;
   visibility: hidden;
 }
-.grow-wrap > textarea {
+
+.grow-wrap>textarea {
   resize: none;
   overflow: hidden;
 }
-.grow-wrap > textarea,
+
+.grow-wrap>textarea,
 .grow-wrap::after {
   padding: 0.5rem;
   font: inherit;
