--- a/css/admin_options.css
+++ b/css/admin_options.css
@@ -5,6 +5,13 @@
     border-left: 5px solid lightblue;
 }
 
+.quickedit_wbw_info_text {
+  padding-left: 15px;
+  background: #f8f8f8;
+  border-left: 5px solid lightblue;
+}
+
+
 label{
     display: inline-flex;
     clear: left;
