--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -28,25 +28,32 @@ body {
 .form-grid {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, 200px);
+  grid-template-columns: auto-fill, [col] auto;
+  grid-template-rows: repeat(auto-fill, [row] auto  );
 }
 
 .form-grid-top {
-  grid-column: 1 / 7;
+  grid-column: col / span 2;
+  grid-row: row ;
 }
 
 .form-grid-col1 {
-  grid-column: 1 / 4;
-  grid-row: 2;
-
+  grid-column: col  ;
+  grid-row: col 2 / span 2 ;
 }
 
-.form-grid-col2 {
-  grid-column: 4 / 7;
+.form-grid-col2-1 {
+  grid-column: col 2 ;
+  grid-row: row 2 ;
+}
+.form-grid-col2-2 {
+  grid-column: col 2 ;
+  grid-row: row 3 ;
 }
 
 .form-grid-bottom {
-  grid-column: 1 / 7;
+  grid-column: col / span 2;
+  grid-row: row 4;
 }
 
 
