--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -14,21 +14,24 @@
 
 .form-grid {
   display: grid;
-  grid-gap: 20px;
-  /* grid-template-columns: repeat(auto-fill, 200px ) ; */
+  grid-gap: 10px;
+  grid-template-columns: auto-fill, [col] auto;
+  grid-template-rows: repeat(auto-fill, [row] auto  );
 }
 
 .form-grid-top {
-  grid-column: 1 / 7;
+  grid-column: col / span 2;
+  grid-row: row ;
 }
 
 .form-grid-col1 {
-  grid-column: 1 / 4;
-
+  grid-column: col  ;
+  grid-row: col 2;
 }
 
-.form-grid-col2 {
-  grid-column: 4 / 7;
+.form-grid-col2{
+  grid-column: col 2 ;
+  grid-row: row 2 ;
 }
 
 .form-grid input {
