--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -191,3 +191,52 @@ span.dashicons.dashicons-info-outline {
   background-color:#FFFFE0;
   border:1px solid #DCA;
 }
+
+
+.tooltip .right {
+  min-width:10em;
+  max-width:500em;
+  white-space: nowrap;
+  top:50%;
+  right:100%;
+  margin-right:20px;
+  line-height: 1.4em;
+  transform:translate(0, -50%);
+  padding:10px;
+  color:#666666;
+  background-color:#FFFFE0;
+  font-weight:normal;
+  font-size:13px;
+  border-radius:8px;
+  position:absolute;
+  z-index:99999999;
+  box-sizing:border-box;
+  display:none;
+  border:1px solid #DCA;
+}
+
+.tooltip:hover .right {
+  display:block;
+}
+
+.tooltip .right i {
+  position:absolute;
+  top:50%;
+  left:100%;
+  margin-top:-12px;
+  width:12px;
+  height:24px;
+  overflow:hidden;
+}
+
+.tooltip .right i::after {
+  content:'';
+  position:absolute;
+  width:12px;
+  height:12px;
+  left:0;
+  top:50%;
+  transform:translate(-50%,-50%) rotate(-45deg);
+  background-color:#FFFFE0;
+  border:1px solid #DCA;
+}
