--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -211,7 +211,7 @@ span.dashicons.dashicons-info-outline {
   position:absolute;
   z-index:99999999;
   box-sizing:border-box;
-  display:none;
+  display:block;
   border:1px solid #DCA;
 }
 
