--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -15,8 +15,8 @@
 .form-grid {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: auto-fill, [col] auto;
-  grid-template-rows: repeat(auto-fill, [row] auto  );
+  grid-template-columns: repeat(2, [col] 1fr);
+  grid-template-rows: repeat(2, [row] auto);
 }
 
 .form-grid-top {
@@ -25,8 +25,8 @@
 }
 
 .form-grid-col1 {
-  grid-column: col  ;
-  grid-row: col 2;
+  grid-column: col;
+  grid-row: row 2;
 }
 
 .form-grid-col2{
