match :focus to :hover for accessibility

--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -166,7 +166,8 @@ span.dashicons.dashicons-info-outline {
   border:1px solid #DCA;
 }
 
-.tooltip:hover .left {
+.tooltip:hover .left,
+.tooltip:focus .left {
   display:block;
 }
 
@@ -215,7 +216,8 @@ span.dashicons.dashicons-info-outline {
   border:1px solid #DCA;
 }
 
-.tooltip:hover .right {
+.tooltip:hover .right,
+.tooltip:focus .right {
   display:block;
 }
 
