--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -245,6 +245,11 @@ span.dashicons.dashicons-info-outline {
 
 /* stolen from wp common.css */
 
+.notice p {
+	margin: 0.5em 0;
+	padding: 2px;
+}
+
 .notice
  {
 	background: #fff;
@@ -286,7 +291,7 @@ span.dashicons.dashicons-info-outline {
 	top: 0;
 	right: 1px;
 	border: none;
-	margin: 0;
+	margin: 0.5em;
 	padding: 9px;
 	background: none;
 	color: #787c82;
