--- a/css/admin_service_bodies.css
+++ b/css/admin_service_bodies.css
@@ -36,3 +36,25 @@ input {
     text-align: center; 
     vertical-align: middle;
 }
+
+.grow-wrap {
+  display: grid;
+}
+
+.grow-wrap::after {
+  content: attr(data-replicated-value) " ";
+  white-space: pre-wrap;
+  visibility: hidden;
+}
+
+.grow-wrap>textarea {
+  resize: none;
+  overflow: hidden;
+}
+
+.grow-wrap>textarea,
+.grow-wrap::after {
+  padding: 0.5rem;
+  font: inherit;
+  grid-area: 1 / 1 / 2 / 2;
+}
