try grid layout

--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -136,3 +136,29 @@
   font: inherit;
   grid-area: 1 / 1 / 2 / 2;
 }
+
+/* body {
+  margin: 40px;
+} */
+
+.sub-cell {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}
+
+/* .box:nth-child(even) {
+  background-color: #ccc;
+  color: #000;
+} */
+
+.sub-grid {
+  width: auto;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 30%);
+  grid-template-rows: repeat(5, 10%);
+  grid-auto-flow: column;
+}
