--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -153,3 +153,19 @@
 /*   grid-auto-rows: 100px; */
   grid-auto-flow: dense;
 }
+
+.c1 {
+  grid-area: auto / c1 / auto / c1;
+}
+
+.c2 {
+  grid-area: auto / c2 / auto / c2;
+}
+
+.c3 {
+  grid-area: auto / c3 / auto / c3;
+}
+
+.c4 {
+  grid-area: auto / c4 / auto / c4;
+}
