--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -144,7 +144,17 @@
   padding-left: 5px;
 }
 
-.wrapper {
+.header {
+  width: auto;
+  display: grid;
+  /* grid-gap: 10px; */
+  grid-template-columns: [h1-start] 1fr [h1-end h2-start] 1fr [h2-end h3-start] 1fr [h3-end h4-start] 1fr [h4-end];
+/*   grid-template-columns: repeat(4, 25%); */
+/*   grid-auto-rows: 100px; */
+  /* grid-auto-flow: dense; */
+}
+
+.gridbody {
   width: auto;
   display: grid;
   grid-gap: 10px;
@@ -152,6 +162,22 @@
 /*   grid-template-columns: repeat(4, 25%); */
 /*   grid-auto-rows: 100px; */
   grid-auto-flow: dense;
+}
+
+.h1 {
+  grid-area: h1;
+}
+
+.h2 {
+  grid-area: h2;
+}
+
+.h3 {
+  grid-area: h3;
+}
+
+.h4 {
+  grid-area: h4;
 }
 
 .c1k {
