--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -357,3 +357,8 @@ div.error {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  opacity: 1;
+}
