--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -140,8 +140,7 @@
 
 .cell-hdr {
   background-color: rgb(236, 236, 236);
-  color: #fff;
-  padding-left: 5px;
+  color: #111;
 }
 
 .header {
@@ -179,6 +178,7 @@
 
 .c1k {
   grid-area: auto / c1k / auto / c1k;
+  padding-left: 5px;
 }
 
 .c1v {
@@ -187,6 +187,8 @@
 
 .c2k {
   grid-area: auto / c2k / auto / c2k;
+  padding-left: 5px;
+
 }
 
 .c2v {
@@ -195,6 +197,8 @@
 
 .c3k {
   grid-area: auto / c3k / auto / c3k;
+  padding-left: 5px;
+
 }
 
 .c3v {
@@ -203,6 +207,8 @@
 
 .c4k {
   grid-area: auto / c4k / auto / c4k;
+  padding-left: 5px;
+
 }
 
 .c4v {
