--- a/css/admin_submissions.css
+++ b/css/admin_submissions.css
@@ -184,6 +184,7 @@
 
 .c1v {
   grid-area: auto / c1v / auto / c1v;
+  min-width: 0;
 }
 
 .c2k {
@@ -194,6 +195,7 @@
 
 .c2v {
   grid-area: auto / c2v / auto / c2v;
+  min-width: 0;
 }
 
 .c3k {
@@ -204,6 +206,7 @@
 
 .c3v {
   grid-area: auto / c3v / auto / c3v;
+  min-width: 0;
 }
 
 .c4k {
@@ -214,4 +217,5 @@
 
 .c4v {
   grid-area: auto / c4v / auto / c4v;
+  min-width: 0;
 }
