--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -360,5 +360,6 @@ div.error {
 
 input[type=number] input[type=number]::-webkit-inner-spin-button, 
 input[type=number] input[type=number]::-webkit-outer-spin-button {
-  opacity: 1;
+  -webkit-appearance: none;
+  margin: 0;
 }
