--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,5 +1,5 @@
-input[type=number] input[type=number]::-webkit-inner-spin-button, 
-input[type=number] input[type=number]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
