--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,5 +1,5 @@
-.form-grid input::-webkit-inner-spin-button, 
-.form-grid input::-webkit-outer-spin-button {
+input::-webkit-inner-spin-button, 
+input::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
