--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -4,7 +4,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.update-form-select.update-form-select select {
+.update-form-select.update-form-select.update-form-select select {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
