--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -4,7 +4,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.update-form-select select {
+.aa {
   line-height: 1.5 !important;
   font-size: 1.2em !important;
   padding: 5px 10px !important;
