--- a/css/admin_options.css
+++ b/css/admin_options.css
@@ -5,12 +5,17 @@
     border-left: 5px solid lightblue;
 }
 
-.quickedit_wbw_info_text {
+.options_dialog_wbw_info_text {
   padding-left: 15px;
   background: #f8f8f8;
   border-left: 5px solid lightblue;
 }
 
+.options_dialog_wbw_warning_text {
+  padding-left: 15px;
+  background: #f8f8f8;
+  border-left: 5px solid red;
+}
 
 label{
     display: inline-flex;
