--- a/css/admin_options.css
+++ b/css/admin_options.css
@@ -25,3 +25,19 @@ label{
 input {
   display: inline-flex;
 }
+
+.banner {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+}
+
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}
