--- a/css/admin_options.css
+++ b/css/admin_options.css
@@ -26,7 +26,7 @@ input {
   display: inline-flex;
 }
 
-.banner {
+.wbw_banner {
   display: grid;
   grid-template-columns: 100px 100px 100px;
   grid-gap: 10px;
