--- a/css/admin_options.css
+++ b/css/admin_options.css
@@ -27,9 +27,9 @@ input {
 }
 
 .wbw_banner {
-    background-image: url('../images/Banner_1px.png'), url('../images/Banner_Trimmed.png'), url('../images/Banner_1px.png');
-    background-repeat: repeat-x, no-repeat, repeat-x;
-    background-size: 175px 196px 175px;
+  background-image: url('../images/Banner_1px.png'), url('../images/Banner_Trimmed.png');
+    background-repeat: repeat-x, no-repeat;
+    background-size: 196px 175px;
     bottom: 0;
     color: white;
     height: 175px;
